# full-quantum-deep-learning

./: README.md  pyproject.toml  requirements-lock.txt  requirements.txt  sweep.yaml
configs/: default.yaml
scripts/: load_qm9.py  sweep_train.py  train.py
src/qdl/: __init__.py  ansatz.py  config.py  data.py  feature_maps.py  metrics.py  model.py  quantum_kernel.py  trainer.py  utils.py
tests/: test_shapes.py
